<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:id="@+id/idh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/id">
    </TextView>
    <TextView
        android:id="@+id/hum"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/humidityy">
    </TextView>
    <TextView
        android:id="@+id/date"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date"/>
</RelativeLayout>