<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".inscription">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        app:srcCompat="@drawable/isims" />
    <TextView
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_account"
        android:layout_gravity="center"
        android:textColor="#B30015"
        android:textStyle="italic|bold"
        android:textSize="25sp"
        ></TextView>
    <TextView
        android:layout_marginLeft="40dp"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_or_email"
        android:textColor="#000"
        android:textSize="20sp"
        ></TextView>
    <EditText
        android:id="@+id/user"
        android:layout_marginTop="20sp"
        android:layout_marginLeft="20dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/name_or_email"
        android:autofillHints="" />
    <TextView
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:text="@string/password"
        android:textColor="#000"
        android:textSize="20sp"
        ></TextView>
    <EditText
        android:id="@+id/pass"
        android:layout_marginTop="20sp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:autofillHints="" />
    <Button
        android:textColor="#fff"
        android:id="@+id/btinscrit"
        android:background="#0D9DC1"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:textSize="15dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/inscrit" />
</LinearLayout>


